# ueye

./: .hgignore  CHANGELOG.rst  CMakeLists.txt  TargetArch.cmake  manifest.xml  package.xml
cfg/: camera.cfg  mono.cfg  stereo.cfg
include/ueye/: Camera.h  CameraNode.h  FramerateNode.h  StereoNode.h
src/: Camera.cpp  CameraNode.cpp  FramerateNode.cpp  StereoNode.cpp  framerate_node.cpp  ueye_camera.cpp  ueye_node.cpp
